--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Skeleton Dice</title>
-	<link rel="stylesheet" type="text/css" href="/styles.css" />
+	<link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 
 <body>
