--- a/index.html
+++ b/index.html
@@ -3,28 +3,67 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Skeleton Dice</title>
 	<link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 
 <body>
-	<main id="app">
+	<header>
 		<h1>Skeleton Dice</h1>
-		<div>
-			<form id="add-die">
-				<label>d<input name="sides" type="number" /></label>
-				<button type="submit">Add Die</button>
-			</form>
-			<form id="delete-die">
-				<label>Delete die<input name="delete-mode" type="checkbox" /></label>
-			</form>
-			<button id="roll-all">Roll All</button>
-		</div>
+	</header>
+	<main id="app">
+		<output id="sum">Sum: 0</output>
 		<ul id="dice"></ul>
 	</main>
+	<footer>
+		<details id="add-menu" open>
+			<summary aria-label="Add die">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+					stroke="currentColor" class="size-6">
+					<path stroke-linecap="round" stroke-linejoin="round"
+						d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+				</svg>
+			</summary>
+			<div>
+				<form id="add-die">
+					<label>d<input name="sides" type="number" value="6" /></label>
+					<button type="submit">Add Die</button>
+				</form>
+				<nav>
+					<b>Common sets:</b>
+					<a href="?d=6&d=6">2d6</a>
+					<a href="?d=6&d=6&d=6">3d6</a>
+					<a href="?d=4&d=6&d=8&d=10&d=12&d=20&d=100">D&D</a>
+				</nav>
+			</div>
+		</details>
+		<button aria-label="Roll all dice" id="roll-all">
+			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+				stroke="currentColor" class="size-6">
+				<path stroke-linecap="round" stroke-linejoin="round"
+					d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
+			</svg>
+		</button>
+		<details id="settings-menu">
+			<summary aria-label="Settings menu">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+					stroke="currentColor" class="size-6">
+					<path stroke-linecap="round" stroke-linejoin="round"
+						d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.325.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 0 1 1.37.49l1.296 2.247a1.125 1.125 0 0 1-.26 1.431l-1.003.827c-.293.241-.438.613-.43.992a7.723 7.723 0 0 1 0 .255c-.008.378.137.75.43.991l1.004.827c.424.35.534.955.26 1.43l-1.298 2.247a1.125 1.125 0 0 1-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.47 6.47 0 0 1-.22.128c-.331.183-.581.495-.644.869l-.213 1.281c-.09.543-.56.94-1.11.94h-2.594c-.55 0-1.019-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 0 1-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 0 1-1.369-.49l-1.297-2.247a1.125 1.125 0 0 1 .26-1.431l1.004-.827c.292-.24.437-.613.43-.991a6.932 6.932 0 0 1 0-.255c.007-.38-.138-.751-.43-.992l-1.004-.827a1.125 1.125 0 0 1-.26-1.43l1.297-2.247a1.125 1.125 0 0 1 1.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.086.22-.128.332-.183.582-.495.644-.869l.214-1.28Z" />
+					<path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+				</svg>
+			</summary>
+			<form id="delete-die">
+				<label>Delete die<input name="delete-mode" type="checkbox" data-type="danger" /><span></span></label>
+				<label>Sum dice<input name="sum" type="checkbox" checked /><span></span></label>
+			</form>
+		</details>
+	</footer>
 </body>
 <script>
 	let diceUl = document.getElementById('dice')
+	let sumOutput = document.getElementById('sum')
 
 	function addDie(sides = 6) {
 		let li = document.createElement('li')
@@ -33,6 +72,14 @@
 			<output></output>
 		</button>`
 		diceUl.appendChild(li)
+	}
+
+	function sumDice() {
+		let sum = 0
+		document.querySelectorAll("[data-sides]").forEach(die => {
+			sum += parseInt(die.querySelector("output").textContent) || 0
+		})
+		sumOutput.textContent = "Sum: " + sum
 	}
 
 	renderDice()
@@ -92,13 +139,23 @@
 	}
 
 	document.addEventListener("click", e => {
-		let element = e.target.dataset.sides ? e.target : (e.target.parentElement && e.target.parentElement.dataset.sides) ? e.target.parentElement : null;
-		if (element) {
+		let die = e.target.dataset.sides ? e.target : (e.target.parentElement && e.target.parentElement.dataset.sides) ? e.target.parentElement : null;
+		if (die) {
 			if (isDeleteMode()) {
-				removeDie(element);
+				removeDie(die);
 			} else {
-				rollDie(element);
+				rollDie(die);
+				sumDice();
 			}
+		}
+
+		let closestDetails = e.target.closest("details");
+		if (closestDetails) {
+			document.querySelectorAll("details").forEach(details => {
+				if (details !== closestDetails) {
+					details.removeAttribute("open");
+				}
+			})
 		}
 	})
 
@@ -106,6 +163,7 @@
 		document.querySelectorAll("[data-sides]").forEach(die => {
 			rollDie(die);
 		})
+		sumDice();
 	})
 </script>
 
